k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ticketing-routes
  namespace: ticketing
spec:
  parentRefs:
    - name: ticketing-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: identity-service
          port: 4001

    - matches:
        - path:
            type: PathPrefix
            value: /events
      backendRefs:
        - name: event-service
          port: 4002

    - matches:
        - path:
            type: PathPrefix
            value: /bookings
      backendRefs:
        - name: booking-service
          port: 4003

    - matches:
        - path:
            type: PathPrefix
            value: /chatbot
      backendRefs:
        - name: chatbot-service
          port: 4004

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-service
          port: 5173
